house keeping, big fixes

--- a/frontend/src/app/delete-erg-warning/delete-erg-warning.component.html
+++ b/frontend/src/app/delete-erg-warning/delete-erg-warning.component.html
@@ -3,7 +3,7 @@
   <button mat-button mat-dialog-close>Cancel</button>
   <button
     mat-button
-    (click)="delete('yes')"
+    (click)="delete()"
     cdkFocusInitial
     style="background-color: red; color: white"
   >
